added station map

--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -10860,6 +10860,11 @@ a:focus {
   }
 }
 
+.leaflet-container {
+  width: 100%;
+  height: 85vh;
+}
+
 .bg-login-image {
   background: url("../img/breeze.jpg");
   background-position: center;
