--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -9901,7 +9901,8 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  /* background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%); */
+  background-image:linear-gradient(180deg, #36b9cc 10%, var(--blue) 100%);
   background-size: cover;
 }
 
